--- a/composer.json
+++ b/composer.json
@@ -94,7 +94,8 @@
             "Webkul\\SocialShare\\": "packages/Webkul/SocialShare/src",
             "Webkul\\Tax\\": "packages/Webkul/Tax/src",
             "Webkul\\Theme\\": "packages/Webkul/Theme/src",
-            "Webkul\\User\\": "packages/Webkul/User/src"
+            "Webkul\\User\\": "packages/Webkul/User/src",
+            "ba6ul\\Razorpay\\": "packages/ba6ul/razorpay/src/"
         }
     },
     "autoload-dev": {
