--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "predis/predis": "^2.2",
         "prettus/l5-repository": "^2.6",
         "pusher/pusher-php-server": "^7.0",
+        "razorpay/razorpay": "^2.9",
         "shetabit/visitor": "^4.1",
         "spatie/laravel-responsecache": "^7.4",
         "spatie/laravel-sitemap": "^7.3"
